# simplevtt

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
client/: CMakeLists.txt  imgui.ini
client/src/vtt/client/: App.cpp  App.hpp  Panel.cpp  Panel.hpp  main.cpp
client/src/vtt/client/panels/: About.cpp  About.hpp  CreateUniverse.cpp  CreateUniverse.hpp  Preferences.cpp  Preferences.hpp
core/: CMakeLists.txt
core/src/vtt/core/: core.cpp  core.hpp  data.hpp  utils.hpp
server/: CMakeLists.txt
server/src/vtt/server/: connection.cpp  connection.hpp  main.cpp  server.cpp  server.hpp
